mariadb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: mariadb
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
