mariadb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-ingress
  namespace: mariadb
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mariadb-nldvps.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb-service
            port:
              number: 3306
  tls:
    - hosts:
        - mariadb-nldvps.ddns.net
      secretName: mariadb-cert
